@@ -22,49 +22,75 @@ import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.search.server.control.SearchControl;
 import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
+import com.echothree.model.data.search.server.entity.SearchKind;
+import com.echothree.model.data.search.server.factory.SearchKindFactory;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
-import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.common.validation.FieldDefinition;
+import com.echothree.util.server.control.BasePaginatedMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.Collection;
 import java.util.List;
 
 public class GetSearchKindsCommand
-        extends BaseSimpleCommand<GetSearchKindsForm> {
-    
+        extends BasePaginatedMultipleEntitiesCommand<SearchKind, GetSearchKindsForm> {
+
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
 
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
-                    new SecurityRoleDefinition(SecurityRoleGroups.SearchKind.name(), SecurityRoles.List.name())
-                    )))
-                )));
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
+                        new SecurityRoleDefinition(SecurityRoleGroups.SearchKind.name(), SecurityRoles.List.name())
+                ))
+        ));
 
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-                ));
+        FORM_FIELD_DEFINITIONS = List.of();
     }
 
     /** Creates a new instance of GetSearchKindsCommand */
     public GetSearchKindsCommand(UserVisitPK userVisitPK, GetSearchKindsForm form) {
         super(userVisitPK, form, COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
     }
-    
+
     @Override
-    protected BaseResult execute() {
+    protected void handleForm() {
+        // No form fields.
+    }
+
+    @Override
+    protected Long getTotalEntities() {
         var searchControl = Session.getModelController(SearchControl.class);
+
+        return searchControl.countSearchKinds();
+    }
+
+    @Override
+    protected Collection<SearchKind> getEntities() {
+        var searchControl = Session.getModelController(SearchControl.class);
+
+        return searchControl.getSearchKinds();
+    }
+
+    @Override
+    protected BaseResult getResult(Collection<SearchKind> entities) {
         var result = SearchResultFactory.getGetSearchKindsResult();
-        
-        result.setSearchKinds(searchControl.getSearchKindTransfers(getUserVisit()));
-        
+
+        if(entities != null) {
+            var searchControl = Session.getModelController(SearchControl.class);
+
+            if(session.hasLimit(SearchKindFactory.class)) {
+                result.setSearchKindCount(getTotalEntities());
+            }
+
+            result.setSearchKinds(searchControl.getSearchKindTransfers(getUserVisit(), entities));
+        }
+
         return result;
     }
-    
+
 }
