@@ -18,89 +18,71 @@ package com.echothree.control.user.search.server.command;
 
 import com.echothree.control.user.search.common.form.GetSearchUseTypeForm;
 import com.echothree.control.user.search.common.result.SearchResultFactory;
-import com.echothree.model.control.core.common.ComponentVendors;
-import com.echothree.model.control.core.common.EntityTypes;
 import com.echothree.model.control.core.common.EventTypes;
-import com.echothree.model.control.core.server.logic.EntityInstanceLogic;
 import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.search.server.control.SearchControl;
+import com.echothree.model.control.search.server.logic.SearchUseTypeLogic;
 import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.data.search.server.entity.SearchUseType;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
-import com.echothree.util.common.message.ExecutionErrors;
+import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.server.control.BaseSingleEntityCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public class GetSearchUseTypeCommand
-        extends BaseSimpleCommand<GetSearchUseTypeForm> {
-    
+        extends BaseSingleEntityCommand<SearchUseType, GetSearchUseTypeForm> {
+
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
-    
+
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.SearchUseType.name(), SecurityRoles.Review.name())
-                        )))
-                )));
-        
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-                new FieldDefinition("SearchUseTypeName", FieldType.ENTITY_NAME, true, null, null),
+                ))
+        ));
+
+        FORM_FIELD_DEFINITIONS = List.of(
+                new FieldDefinition("SearchUseTypeName", FieldType.ENTITY_NAME, false, null, null),
                 new FieldDefinition("EntityRef", FieldType.ENTITY_REF, false, null, null),
                 new FieldDefinition("Uuid", FieldType.UUID, false, null, null)
-                ));
+        );
     }
-    
+
     /** Creates a new instance of GetSearchUseTypeCommand */
     public GetSearchUseTypeCommand(UserVisitPK userVisitPK, GetSearchUseTypeForm form) {
         super(userVisitPK, form, COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
     }
-    
+
     @Override
-    protected BaseResult execute() {
-        var result = SearchResultFactory.getGetSearchUseTypeResult();
-        var searchUseTypeName = form.getSearchUseTypeName();
-        var parameterCount = (searchUseTypeName == null ? 0 : 1) + EntityInstanceLogic.getInstance().countPossibleEntitySpecs(form);
+    protected SearchUseType getEntity() {
+        var searchUseType = SearchUseTypeLogic.getInstance().getSearchUseTypeByUniversalSpec(this, form, true);
 
-        if(parameterCount == 1) {
-            var searchControl = Session.getModelController(SearchControl.class);
-            SearchUseType searchUseType = null;
-
-            if(searchUseTypeName == null) {
-                var entityInstance = EntityInstanceLogic.getInstance().getEntityInstance(this, form, ComponentVendors.ECHO_THREE.name(),
-                        EntityTypes.SearchUseType.name());
-                
-                if(!hasExecutionErrors()) {
-                    searchUseType = searchControl.getSearchUseTypeByEntityInstance(entityInstance);
-                }
-            } else {
-                searchUseType = searchControl.getSearchUseTypeByName(searchUseTypeName);
-
-                if(searchUseType == null) {
-                    addExecutionError(ExecutionErrors.UnknownSearchUseTypeName.name(), searchUseTypeName);
-                }
-            }
-
-            if(!hasExecutionErrors()) {
-                result.setSearchUseType(searchControl.getSearchUseTypeTransfer(getUserVisit(), searchUseType));
-                sendEvent(searchUseType.getPrimaryKey(), EventTypes.READ, null, null, getPartyPK());
-            }
-        } else {
-            addExecutionError(ExecutionErrors.InvalidParameterCount.name());
+        if(searchUseType != null) {
+            sendEvent(searchUseType.getPrimaryKey(), EventTypes.READ, null, null, getPartyPK());
         }
-        
+
+        return searchUseType;
+    }
+
+    @Override
+    protected BaseResult getResult(SearchUseType searchUseType) {
+        var searchControl = Session.getModelController(SearchControl.class);
+        var result = SearchResultFactory.getGetSearchUseTypeResult();
+
+        if(searchUseType != null) {
+            result.setSearchUseType(searchControl.getSearchUseTypeTransfer(getUserVisit(), searchUseType));
+        }
+
         return result;
     }
-    
+
 }
